hphp/hack/test/typecheck/reactive/owned_mutable6.php.exp
File "owned_mutable6.php", line 4, characters 9-31:
`__OwnedMutable` annotated parameters are only allowed in reactive functions. (Parsing[1002])
